--- a/tooltips.html
+++ b/tooltips.html
@@ -8,36 +8,66 @@
 </head>
 
 <body>
+	Score: <span id="score"> </span>/14 <br><br>
 
 	Hi, <br>
 
-	Your <span title="Spark should be capitalised"> spark </span> client reward has arrived <br><br>
+	Your <span id="error1" onclick="check(id)" title="Grammar issue here"> spark </span> client reward has arrived <br><br>
 
 	LOYALTY REWARD <br><br>
-	<span title="Grammar issue here"> What's is it and </span> how to claim it? <br>
+	<span id="error2" onclick="check(id)" title="Grammar issue here"> What's is it and </span> how to claim it? <br>
 
-	We are celebrating our 3 milion subscribers during this pandemic <span title="This sentence isn't sensiscal"> so we decided giving our loyal clients </span> a 100 
-	<span title="NZ companies don't specify NZD">nzd </span> reward directly <span title="Can't deposit to a bank card, only an account"> deposited to their bank card </span>. <br>
+	We are celebrating our 3 milion subscribers during this pandemic 
+	<span id="error3" onclick="check(id)" title="This sentence isn't sensiscal"> so we decided giving our loyal clients </span> a 100 
+	<span id="error4" onclick="check(id)" title="NZ companies don't specify NZD">nzd </span> reward directly 
+	<span id="error5" onclick="check(id)" title="Can't deposit to a bank card, only an account"> deposited to their bank card </span>. <br>
 
-	This gift card can be <span title="Things aren't credited to cards in NZ"> credited directly to your card </span> 
-	<span title="Grammar issue here"> Simply </span> follow the the 3 steps after clicking on "claim now" <br><br>
+	This gift card can be 
+	<span id="error6" onclick="check(id)" title="Things aren't credited to cards in NZ"> credited directly to your card </span> 
+	<span id="error7" onclick="check(id)" title="Grammar issue here"> Simply </span> follow the the 3 steps after clicking on "claim now" <br><br>
 
-	<a href="http://shadyurl.com/" title="This url is shady"> Claim gift now </a> <br><br>
+	<a href="javascript:;" id="error8" onclick="check(id)" title="This url is shady"> Claim gift now </a> <br><br>
 
-	<span title="Money is usually deposited into an account"> The balance of the gift will be credited to your credit card </span> in 
-	<span title="Grammar issue here"> the next 24 hour </span> 
-	<span title="Grammar issue here">, It </span> will appear on your bank statement <span title="Weird choice of word here">on the name </span>
-	<span title="Most bank references aren't that long">"gift card from SparkgiftsNz". </span> <br>
+	<span id="error9" onclick="check(id)" title="Money is usually deposited into an account"> The balance of the gift will be credited to your credit card </span> in 
+	<span id="error10" onclick="check(id)" title="Grammar issue here"> the next 24 hour </span> 
+	<span id="error11" onclick="check(id)" title="Grammar issue here">, It </span> will appear on your bank statement </span>
+	<span id = "eror12" onclick="check(id)" title="Grammar issue here">on the name </span>
+	<span id="error13" onclick="check(id)" title="Most bank references aren't that long">"gift card from SparkgiftsNz". </span> <br>
 
-	<span title="This is just a weird sentnece"> The credit balance can be used for personal use </span> <br><br>
+	<span id="error14" onclick="check(id)" title="This is just a weird sentnece"> The credit balance can be used for personal use </span> <br><br>
 
 	The team at Spark <br><br>
 
 	Copyright 2021 © <br>
 	Spark New Zealand Trading Limited. <br>
 
-	All rights reserved
-	
+	All rights reserved <br><br>
+	<table border="1" id="myTable">
+      <tr>
+        <th>Issue</th>
+        <th>Reason</th>
+      </tr>
+    </table>
 </body>
+
+<script>
+	window.onload = function() {
+		document.getElementById("score").innerHTML = 0;
+	};
+	
+	function check(issue) {
+		let score = Number(document.getElementById('score').innerHTML)
+		if (document.getElementById(issue).style.color.length == 0) {
+			document.getElementById(issue).style.color = "red";
+			document.getElementById('score').innerHTML = score + 1;
+			let table = document.getElementById("myTable");
+			var row = table.insertRow(-1);
+			var cell1 = row.insertCell(0);
+			var cell2 = row.insertCell(1);
+			cell1.innerHTML = document.getElementById(issue).innerHTML;
+			cell2.innerHTML = document.getElementById(issue).title; 
+		}
+	}
+</script>
 
 </html>
